--- a/Readme
+++ b/Readme
@@ -3,13 +3,17 @@
 
 This project aims to practice C++ and to try new project manager (meson) through the example of a neural network to recognize digits from the MNIST project
 
+## How to launch it?
+
+clone this repo.
+
+```
+$ meson builddir && cd builddir
+$ meson compile
+$ ./src/MNT
+```
 
 
-clear && meson compile && ./src/MNT
+## The MNIST dataset comes from [there](http://cis.jhu.edu/~sachin/digit/digit.html)
 
-
-mnist data set
-
-
-http://cis.jhu.edu/~sachin/digit/digit.html
 
